--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ rel="stylesheet"
 href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
 rel="stylesheet"
 />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/src/assets/logo.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Open AI Article Summarizer </title>
   </head>
